added changes to docker yml files and application